# mailer

./: .pylintrc  LICENSE  Makefile  pyproject.toml
0/: test_main.py
1/: main.py
5/: test_main.py
6/: test_main.py
7/: main.py  test_main.py
9/: main.py
data/: subscribers.json
mailer/: main.py
tests/: test_main.py
