[tool.poetry]
name = "mailer"
version = "0.1.0"
description = "Example project with testing improvement"
authors = ["Radosław Ganczarek <radoslaw@ganczarek.in>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.6.0"
isort = "^5.7.0"
coverage = {extras = ["toml"], version = "^5.4"}

[tool.mypy]
check_untyped_defs=true
no_implicit_optional=true
pretty=true
python_version = 3.9
show_error_codes=true
show_error_context=true

disallow_any_decorated=true
disallow_any_explicit=true
disallow_any_expr=true
disallow_any_generics=true
disallow_any_unimported=true
disallow_incomplete_defs=true
disallow_subclassing_any=true
disallow_untyped_calls=true
disallow_untyped_decorators=true
disallow_untyped_defs=true

warn_no_return=true
warn_redundant_casts=true
warn_return_any=true
warn_unreachable=true
warn_unused_ignores=true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.run]
branch = true
source = ["mailer", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"